[package]
name = "arc-cli"
version = "0.1.0"
authors = ["Quentin Boyer <qbsecond@gmail.com>"]
edition = "2018"

[dependencies]
clap = "2.33.0"
futures = "0.1"
bytes = "0.4"
http = "0.1"
prost = "0.5"
tokio = "0.1"
tower-request-modifier = "0.1"
tower-hyper = "0.1"
hyper = "0.12"
tower-grpc = { version = "0.1.0", features= ["tower-hyper"] }
tower-service = "0.2"
tower-util = "0.1"
structopt = "0.3.0"
yansi = "0.5.0"

[build-dependencies]
tower-grpc-build = { version = "0.1.0", features = ["tower-hyper"] }
